include client specific script

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 
 <div class="box asearch">
     <form id="search">
-        <input type="text" name="search" placeholder="search" autocomplete="off">
+        <input type="text" class="search-input" name="search" placeholder="search" autocomplete="off">
     </form>
     <div class="result-stream"></div>
 </div>
 
 <script type="text/javascript" src="asearch.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
