layout files in folders

--- a/example/index.html
+++ b/example/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Ajax Search.</title>
-    <link rel="stylesheet" href="asearch.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/asearch.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         input[name='search'] {
             height: 28px;
@@ -37,8 +37,8 @@
     <div class="result-stream"></div>
 </div>
 
-<script type="text/javascript" src="asearch.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="js/asearch.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
