use minimised version of Asearch

--- a/example/index.html
+++ b/example/index.html
@@ -37,7 +37,7 @@
     <div class="result-stream"></div>
 </div>
 
-<script type="text/javascript" src="js/asearch.js"></script>
+<script type="text/javascript" src="js/asearch.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 
