--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-  <title>Asearch</title>
-  <meta name="description" content="simple ajax search">
+    <title>Asearch by danleyb2</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">Asearch</h1>
+      <div class="container">
+        <h1>Asearch</h1>
+        <h2>simple ajax search</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/danleyb2/asearch/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/danleyb2/asearch/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/danleyb2/asearch" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">simple ajax search</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/danleyb2/asearch/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/danleyb2/asearch/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/danleyb2/asearch" class="code">View Asearch on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
 <a id="simple-ajax-search" class="anchor" href="#simple-ajax-search" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Simple Ajax search</h1>
 
 <p>You only need to provide a search url and create a template for the response</p>
@@ -76,26 +68,9 @@ The JSON result keys values will replace the brackets</p>
 <p>then init <code>asearch.js</code><br>
 <code>searchAjax.init(config);</code><br>
 it will do the rest.</p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/danleyb2" class="avatar"><img src="https://avatars2.githubusercontent.com/u/9919961?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/danleyb2">danleyb2</a> maintains <a href="https://github.com/danleyb2/asearch">Asearch</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/danleyb2/asearch/tarball/master" class="tar">tar</a><a href="https://github.com/danleyb2/asearch/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
